dynamix/force-app/main/default/objects/Activity/fields/Call_Sub_status__c.field-meta.xml
<CustomField>
    <fullName>Call_Sub_status__c</fullName>
    <label>Call Sub-status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Call_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SVS</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Junk</fullName>
            </value>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Call Back Later</fullName>
            </value>
            <value>
                <fullName>Not Answering</fullName>
            </value>
            <value>
                <fullName>Disconnected while ringing</fullName>
            </value>
            <value>
                <fullName>Number Busy</fullName>
            </value>
            <value>
                <fullName>Switched Off</fullName>
            </value>
            <value>
                <fullName>Not Reachable</fullName>
            </value>
            <value>
                <fullName>IVR Invalid Number</fullName>
            </value>
            <value>
                <fullName>Temporarily Disconnected</fullName>
            </value>
            <value>
                <fullName>Incoming calls barred</fullName>
            </value>
            <value>
                <fullName>Booking Done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>