dynamix/force-app/main/default/objects/Activity/fields/Date_and_Time_of_Site_Visit__c.field-meta.xml
<CustomField>
    <fullName>Date_and_Time_of_Site_Visit__c</fullName>
    <label>Date and Time of Scheduled Site Visit</label>
    <type>DateTime</type>
</CustomField>