dynamix/force-app/main/default/objects/Activity/fields/Description_Check__c.field-meta.xml
<CustomField>
    <fullName>Description_Check__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Description Check</label>
    <type>Checkbox</type>
</CustomField>