dynamix/force-app/main/default/objects/Activity/fields/Disposition__c.field-meta.xml
<CustomField>
    <fullName>Disposition__c</fullName>
    <label>Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ringing</fullName>
            </value>
            <value>
                <fullName>Out of Coverage Area</fullName>
            </value>
            <value>
                <fullName>Switched Off</fullName>
            </value>
            <value>
                <fullName>Temp Out of Service</fullName>
            </value>
            <value>
                <fullName>Number Busy</fullName>
            </value>
            <value>
                <fullName>Possession Timeline</fullName>
            </value>
            <value>
                <fullName>Location</fullName>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Wrong Number</fullName>
            </value>
            <value>
                <fullName>Already Purchased</fullName>
            </value>
            <value>
                <fullName>Not Inquired</fullName>
            </value>
            <value>
                <fullName>Test Lead</fullName>
            </value>
            <value>
                <fullName>No Requirement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>