dynamix/force-app/main/default/objects/Activity/fields/Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Enquiry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enquiry</label>
    <referenceTo>Enquiry__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>