dynamix/force-app/main/default/objects/Activity/fields/Enquiry_Status__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Status__c</fullName>
    <label>Enquiry Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open – Not Contacted</fullName>
            </value>
            <value>
                <fullName>Not Connected</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Not Qualified</fullName>
            </value>
            <value>
                <fullName>Site Visit Scheduled</fullName>
            </value>
            <value>
                <fullName>Site Visit Done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>