dynamix/force-app/main/default/objects/Activity/fields/EventId__c.field-meta.xml
<CustomField>
    <fullName>EventId__c</fullName>
    <label>EventId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>