dynamix/force-app/main/default/objects/Activity/fields/Follow_Up_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Date_Time__c</fullName>
    <label>Follow Up Date&amp;Time</label>
    <type>DateTime</type>
</CustomField>