dynamix/force-app/main/default/objects/Activity/fields/Is_Site_Visit__c.field-meta.xml
<CustomField>
    <fullName>Is_Site_Visit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Site Visit</label>
    <type>Checkbox</type>
</CustomField>