dynamix/force-app/main/default/objects/Activity/fields/Next_Followup_date__c.field-meta.xml
<CustomField>
    <fullName>Next_Followup_date__c</fullName>
    <label>Next Follow up date</label>
    <type>Date</type>
</CustomField>