dynamix/force-app/main/default/objects/Activity/fields/Sent_SVS_Notification__c.field-meta.xml
<CustomField>
    <fullName>Sent_SVS_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent SVS Notification</label>
    <type>Checkbox</type>
</CustomField>