dynamix/force-app/main/default/objects/Activity/fields/Status1__c.field-meta.xml
<CustomField>
    <fullName>Status1__c</fullName>
    <formula>Text(Status)</formula>
    <label>Status1</label>
    <type>Text</type>
</CustomField>