dynamix/force-app/main/default/objects/Activity/fields/Task_Target__c.field-meta.xml
<CustomField>
    <fullName>Task_Target__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task Target</label>
    <referenceTo>Task_Target__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>