dynamix/force-app/main/default/objects/Activity/fields/Throw_Validation__c.field-meta.xml
<CustomField>
    <fullName>Throw_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Throw Validation</label>
    <type>Checkbox</type>
</CustomField>