dynamix/force-app/main/default/objects/Activity/fields/Time_Difference__c.field-meta.xml
<CustomField>
    <fullName>Time_Difference__c</fullName>
    <formula>ROUND((NOW() - CreatedDate) * 24, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Difference</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>