dynamix/force-app/main/default/objects/Activity/fields/Type_Of_Call__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Call__c</fullName>
    <label>Type Of Call</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre Sales</fullName>
            </value>
            <value>
                <fullName>Post Sales</fullName>
            </value>
            <value>
                <fullName>Sourcing</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>