dynamix/force-app/main/default/objects/Activity/fields/wk_exo__Call_Description__c.field-meta.xml
<CustomField>
    <fullName>wk_exo__Call_Description__c</fullName>
    <label>Call Description</label>
    <type>TextArea</type>
</CustomField>