dynamix/force-app/main/default/objects/Activity/fields/wk_exo__call_start_time__c.field-meta.xml
<CustomField>
    <fullName>wk_exo__call_start_time__c</fullName>
    <label>Exotel: Call Start Time</label>
    <length>100</length>
    <type>Text</type>
</CustomField>