dynamix/force-app/main/default/objects/Activity/fields/wk_exo__Customer_Phone__c.field-meta.xml
<CustomField>
    <fullName>wk_exo__Customer_Phone__c</fullName>
    <label>Customer Phone</label>
    <type>Phone</type>
</CustomField>