dynamix/force-app/main/default/objects/Activity/fields/wk_exo__Exotel_Call_Type__c.field-meta.xml
<CustomField>
    <fullName>wk_exo__Exotel_Call_Type__c</fullName>
    <label>Exotel: Call Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Missed</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Dialed</fullName>
            </value>
            <value>
                <fullName>Ringing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>